// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonTable should render 1`] = `
<div>
  <h3>
    Persons
  </h3>
  <search-field
    label="Search by name"
  />
  <table-pagination
    page="[object Object]"
  />
  <table
    class="table table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Image
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          name (suffix)
        </td>
        <td>
          <img
            alt=""
            height="50"
            src="url"
          />
        </td>
      </tr>
      <tr>
        <td>
          2
        </td>
        <td>
          name without suffix
        </td>
        <td>
          <img
            alt=""
            height="50"
            src="url-2"
          />
        </td>
      </tr>
    </tbody>
  </table>
  <table-pagination
    page="[object Object]"
  />
</div>
`;

exports[`PersonTable should render alert 1`] = `
<div>
  <div
    class="fade alert alert-danger show"
    role="alert"
  >
    System error!
  </div>
</div>
`;

exports[`PersonTable should render empty list 1`] = `
<div>
  <h3>
    Persons
  </h3>
  <search-field
    label="Search by name"
  />
  <table-pagination
    page="[object Object]"
  />
  <table
    class="table table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th>
          #
        </th>
        <th>
          Name
        </th>
        <th>
          Image
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <table-pagination
    page="[object Object]"
  />
</div>
`;

exports[`PersonTable should render spinner 1`] = `
<div>
  <div
    class="spinner-border"
    role="status"
  >
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
  </div>
</div>
`;
